ollama fix dark mode query

--- a/components/styles/variables.css
+++ b/components/styles/variables.css
@@ -16,10 +16,12 @@
 
 /* Dark theme */
 @media (prefers-color-scheme: dark) {
-	--cl-brd: #c5c5c5;
-	--cl-bkg-d: #212121;
-	--cl-bkg-l: #2f2f2f;
-	--cl-bkg-l2: #676767;
-	--cl-text: silver;
-	--cl-icon: silver;
+	:root {
+		--cl-brd: #c5c5c5;
+		--cl-bkg-d: #212121;
+		--cl-bkg-l: #2f2f2f;
+		--cl-bkg-l2: #676767;
+		--cl-text: silver;
+		--cl-icon: silver;
+	}
 }
